--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,7 +132,7 @@ deploy-to-staging:
         - schedules
     variables:
         RELEASE_WEBHOOK_NAME: "staging"
-        RELEASE_WEBHOOK_DESCRIPTION: "You can install this version by running:\n```bash\npip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple hikari.core\n```\n"
+        RELEASE_WEBHOOK_DESCRIPTION: "Install dev releases with:\n```bash\npip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple hikari.core==<VERSION>\n```\n"
         RELEASE_WEBHOOK_COLOUR: "0xd34615"
     environment:
         name:
