Update .gitlab-ci.yml to use Python3.7.0b4, as Python3 7.0rc is causing an error on Coverage.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ py37:
 ### TEST IN PYTHON 3.8
 ###
 py38:
-    image: python:3.8-rc-alpine
+    image: python:3.8.0b4-alpine
     extends: .test
 
 
