--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,8 +72,11 @@ py37:
 ### TEST IN PYTHON 3.8
 ###
 py38:
-    image: python:3.8.0b4-alpine
+    image: python:3.8.0rc-alpine
     extends: .test
+    # https://github.com/pytest-dev/pytest/issues/5838
+    # TODO: RE-ENABLE WHEN ISSUE HAS BEEN FIXED
+    allow_failure: true
 
 
 ###
