--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -154,10 +154,7 @@ test-pages:
         - apt-get install curl git openssh-client -y
         - pip install poetry requests
         - poetry install -v
-        - poetry show -v
-    after_script:
-        - source tasks/deploy.sh
-        - do-deployment
+        - poetry show -
 
 ###
 ### HANDLE DEPLOYING TO OUR STAGING ENVIRONMENT ON test.pypi.org
@@ -174,7 +171,10 @@ deploy-to-staging:
         RELEASE_WEBHOOK_NAME: "testing pypi (staging)"
         RELEASE_WEBHOOK_COLOUR: "0xd34615"
     script:
-        export RELEASE_WEBHOOK_DESCRIPTION="Install dev releases with:\n```bash\npip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple hikari.core==$(python tasks/make-version-string.py staging)\n```\n"
+        - export RELEASE_WEBHOOK_DESCRIPTION="Install dev releases with:\n```bash\npip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple hikari.core==$(python tasks/make-version-string.py staging)\n```\n"
+        - source tasks/deploy.sh ; do-deployment 
+
+
     environment:
         name:
             staging
@@ -194,7 +194,8 @@ deploy-to-prod:
         RELEASE_WEBHOOK_NAME: "pypi (prod)"
         RELEASE_WEBHOOK_COLOUR: "0x5c2040"
     script:
-        export RELEASE_WEBHOOK_DESCRIPTION="Install it with:\n```bash\npip install hikari.core==$(python tasks/make-version-string.py master)\n```\n"
-    environment:
+        - export RELEASE_WEBHOOK_DESCRIPTION="Install it with:\n```bash\npip install hikari.core==$(python tasks/make-version-string.py master)\n```\n"
+        - source tasks/deploy.sh ; do-deployment 
+   environment:
         name:
             prod
