--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,10 @@ pytest-asyncio  = "~0.10"
 pytest-cov      = "~2.7"
 pytest-html     = "~2.0"
 pytest-testdox  = "~1.1"
+sphinx          = "~2.1"
+sphinx-autodoc-typehints = "~1.6"
+sphinx-bootstrap-theme = "~0.7"
+Jinja2          = "~2.10"
 
 [tool.black]
 line-length     = 120
