--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ pytest-asyncio  = "~0.10"
 pytest-cov      = "~2.7"
 pytest-html     = "~2.0"
 pytest-testdox  = "~1.1"
+requests        = "~2.22"
 sphinx          = "~2.1"
 sphinx-autodoc-typehints = "~1.6"
 sphinx-bootstrap-theme = "~0.7"
