Updated class names, implemented ban actions, added logic to handle updating emojis and made emojis non-volatile.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ py38:
         - apt-get update
         - apt-get install git -y
         - apt-get install graphviz -y
-        - pip install poetry nox requests
+        - pip install poetry nox
         - git fetch --all --prune
         - rm public -Rvf || true
         - mkdir public || true
