--- a/pytest.ini
+++ b/pytest.ini
@@ -11,5 +11,5 @@ markers =
     user: Mark this test as being part of the User API.
     voice: Mark this test as being part of the Voice API.
     webhook: Mark this test as being part of the Webhook API.
-    emoji: Mark this test as being part of the Emoji API.
+    emoji: Mark this test as being part of the AbstractEmoji API.
     state: Mark this test as being part of the state system.
