--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,8 +113,6 @@ pages:
         - git checkout origin/master -f
         - git status
 
-        - set-versions "$(python tasks/make-version-string.py master)"
-
         - nox -r -ssphinx
     artifacts:
         paths:
@@ -129,7 +127,7 @@ test-pages:
     allow_failure: false
     script:
         - source tasks/deploy.sh
-        - set-versions "$(python tasks/make-version-string.py staging)"
+        - set-versions "${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}-job-${CI_JOB_ID}"
         - nox -ssphinx
     artifacts:
         paths:
@@ -155,9 +153,6 @@ test-pages:
         - pip install poetry requests
         - poetry install -v
         - poetry show -v
-    after_script:
-        - source tasks/deploy.sh
-        - do-deployment
 
 ###
 ### HANDLE DEPLOYING TO OUR STAGING ENVIRONMENT ON test.pypi.org
@@ -174,7 +169,9 @@ deploy-to-staging:
         RELEASE_WEBHOOK_NAME: "testing pypi (staging)"
         RELEASE_WEBHOOK_COLOUR: "0xd34615"
     script:
-        export RELEASE_WEBHOOK_DESCRIPTION="Install dev releases with:\n```bash\npip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple hikari.core==$(python tasks/make-version-string.py staging)\n```\n"
+        - export RELEASE_WEBHOOK_DESCRIPTION=''
+        - source tasks/deploy.sh
+        - do-deployment
     environment:
         name:
             staging
@@ -194,7 +191,9 @@ deploy-to-prod:
         RELEASE_WEBHOOK_NAME: "pypi (prod)"
         RELEASE_WEBHOOK_COLOUR: "0x5c2040"
     script:
-        export RELEASE_WEBHOOK_DESCRIPTION="Install it with:\n```bash\npip install hikari.core==$(python tasks/make-version-string.py master)\n```\n"
+        - export RELEASE_WEBHOOK_DESCRIPTION=''
+        - source tasks/deploy.sh
+        - do-deployment
     environment:
         name:
             prod
