Added missing import that suddenly has become an issue for some reason.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ sphinx-autodoc-typehints = "~1.6"
 sphinx-bootstrap-theme = "~0.7"
 Jinja2          = "~2.10"
 
+# Sphinx seems to die without this, annoyingly.
+importlib-metadata = "0.23"
+
 [tool.black]
 line-length     = 120
 target-version  = ["py37"]
