--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,9 @@ sphinx-bootstrap-theme = "~0.7"
 Jinja2          = "~2.10"
 importlib-metadata = "0.23"
 
+# Sphinx seems to die without this, annoyingly.
+importlib-metadata = "0.23"
+
 [tool.black]
 line-length     = 120
 target-version  = ["py37"]
