Added scaffholding for state_registry_impl tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,3 +13,5 @@ markers =
     webhook: Mark this test as being part of the Webhook API.
     emoji: Mark this test as being part of the AbstractEmoji API.
     state: Mark this test as being part of the state system.
+
+xfail_strict = true
