Editorconfig update [skip ci]

--- a/.editorconfig
+++ b/.editorconfig
@@ -120,8 +120,8 @@ ij_python_space_within_empty_method_parentheses = false
 ij_python_spaces_around_additive_operators = true
 ij_python_spaces_around_assignment_operators = true
 ij_python_spaces_around_bitwise_operators = true
-ij_python_spaces_around_eq_in_keyword_argument = true
-ij_python_spaces_around_eq_in_named_parameter = true
+ij_python_spaces_around_eq_in_keyword_argument = false
+ij_python_spaces_around_eq_in_named_parameter = false
 ij_python_spaces_around_equality_operators = true
 ij_python_spaces_around_multiplicative_operators = true
 ij_python_spaces_around_power_operator = true
