--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,10 @@ websockets      = "~8.1"
 [tool.poetry.dev-dependencies]
 asynctest       = "~0.13"
 async-timeout   = "~3.0"
+bandit          = "~1.6"
+black           = { git = "https://github.com/psf/black", branch = "master" }
 coverage        = "~4.5"
-nox             = "~2019"
+nox             = ">2018"
 pytest          = "~5.2"
 pytest-asyncio  = "~0.10"
 pytest-cov      = "~2.8"
