--- a/tasks/jobs/test.yaml
+++ b/tasks/jobs/test.yaml
@@ -36,11 +36,12 @@
         - apt-get install -qy git gcc g++ make
         - pip install virtualenv
         - >
-            if [[ -v ${CI_IS_SCHEDULED} ]] || [[ ! -f .venv ]]; then
+            if [[ "${CI_IS_SCHEDULED}" -eq "1" ]] || [[ ! -f .venv ]]; then
                 echo -e "\e[0;35mInstalling new venv and installing poetry inside it.\e[0m"
                 rm poetry.lock .cache/pip .venv/ .nox/ .pytest_cache/ -Rf || true
                 python -m venv .venv
                 source .venv/bin/activate
+                pip install -U pip
                 pip install poetry
                 poetry update
             else
