Removed unnecesarry cached install in CI, cached .venv for page jobs

--- a/tasks/jobs/pages.yaml
+++ b/tasks/jobs/pages.yaml
@@ -23,6 +23,7 @@
         paths:
             - $CI_PROJECT_DIR/.pytest_cache
             - $CI_PROJECT_DIR/.nox
+            - $CI_PROJECT_DIR/.venv
             - $CI_PROJECT_DIR/.cache/pip
             - $CI_PROJECT_DIR/poetry.lock
         key: $CI_COMMIT_REF_SLUG-$CI_JOB_STAGE-$CI_JOB_NAME
@@ -32,13 +33,13 @@
     before_script:
         - rm public -Rvf || true
         - mkdir public || true
-        - apt-get install -qy git gcc g++ make
-        - apt-get install graphviz -qy || apt-get update && apt-get install graphviz -qy
-        - pip install virtualenv
+        - apt-get update -q  # graphviz won't resovle without this???
+        - apt-get install -qy git gcc g++ make graphviz
         - >
             if [[ "${CI_IS_SCHEDULED}" -eq "1" ]] || [[ ! -d .venv ]]; then
                 echo "Installing new venv and installing poetry inside it."
                 rm poetry.lock .cache/pip .venv/ .nox/ .pytest_cache/ -Rf || true
+                pip install virtualenv
                 python -m venv .venv
                 source .venv/bin/activate
                 pip install -U pip
