--- a/tasks/jobs/pages.yaml
+++ b/tasks/jobs/pages.yaml
@@ -53,7 +53,7 @@
         - git fetch --all --prune --depth=1
 
 pages:
-    stage: deploy
+    stage: pages
     extends: .pages
     script:
         # Build staging AND master.
