Added gateway_bot impl and start of http_adapter

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,7 @@ markers =
     voice: Mark this test as being part of the Voice API.
     webhook: Mark this test as being part of the Webhook API.
     emoji: Mark this test as being part of the AbstractEmoji API.
-    state: Mark this test as being part of the state system.
+    orm: Mark this test as being part of the ORM.
+    integration: Mark this test as an integration test.
 
 xfail_strict = true
