--- a/tasks/jobs/test.yml
+++ b/tasks/jobs/test.yml
@@ -21,33 +21,17 @@
     - merge_requests
     - tags
     - schedules
-  cache:
-    paths:
-      - $CI_PROJECT_DIR/.pytest_cache
-      - $CI_PROJECT_DIR/.nox
-      - $CI_PROJECT_DIR/.venv
-      - $CI_PROJECT_DIR/.cache/pip
-      - $CI_PROJECT_DIR/poetry.lock
-    key: $CI_COMMIT_REF_SLUG-$CI_JOB_STAGE-$CI_JOB_NAME
-    policy: pull-push
   allow_failure: false
   stage: test
   before_script:
     - apt-get install -qy git gcc g++ make
-    - >
-      if [[ "${CI_IS_SCHEDULED}" -eq "1" ]] || [[ ! -d .venv ]]; then
-          echo -e "\e[0;35mInstalling new venv and installing poetry inside it.\e[0m"
-          rm poetry.lock .cache/pip .venv/ .nox/ .pytest_cache/ -Rf || true
-          pip install virtualenv
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install -U pip
-          pip install poetry
-          poetry update
-      else
-          echo -e "\e[0;36mReusing cached venv from GitLab caches.\e[0m"
-          source .venv/bin/activate
-      fi
+    - rm poetry.lock .cache/pip .venv/ .nox/ .pytest_cache/ -Rf || true
+    - pip install virtualenv
+    - python -m venv .venv
+    - source .venv/bin/activate
+    - pip install -U pip
+    - pip install poetry
+    - poetry update
     - source tasks/config.sh
     - python -V
     - mkdir public || true
